--- a/public/style.css
+++ b/public/style.css
@@ -2205,3 +2205,15 @@ textarea.form-control {
 /* ====== The End ====== */
 
 /*# sourceMappingURL=style.css.map */
+.fpt-event-detail .info-item {
+  -webkit-box-flex: 1;
+  -ms-flex: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex: auto;
+  padding: 0 15px;
+}
+.fpt-event-detail .info-item .icon {
+  margin-right: 8px;
+}
