--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,9 @@
   margin: 0;
   padding: 0; }
 
+*:not(i){
+  font-family: "Arial" !important;
+}
 body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
