--- a/public/style.css
+++ b/public/style.css
@@ -2220,3 +2220,17 @@ textarea.form-control {
 .fpt-event-detail .info-item .icon {
   margin-right: 8px;
 }
+#callbtn {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
