--- a/public/style.css
+++ b/public/style.css
@@ -3656,3 +3656,13 @@ hotline-phone-ring-wrap {
         display: none;
     }
 }
+
+.one-line-title {
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    border: 1px solid #ddd;
+    margin: 0;
+}
