--- a/public/style.css
+++ b/public/style.css
@@ -839,7 +839,7 @@ input:focus {
 
 .hero-blog-post .post-content .post-title:hover,
 .hero-blog-post .post-content .post-title:focus {
-    color: #ed3974;
+    color: #21a9ad;
 }
 
 .hero-blog-post .post-content .video-play {
@@ -1147,7 +1147,7 @@ input:focus {
 
 .single-blog-post .post-content .post-title:hover,
 .single-blog-post .post-content .post-title:focus {
-    color: #ed3974;
+    color: #21a9ad;
 }
 
 .single-blog-post .post-content .post-meta a {
@@ -1656,7 +1656,7 @@ input:focus {
 
 .single-trending-post .post-content .post-title:hover,
 .single-trending-post .post-content .post-title:focus {
-    color: #ed3974;
+    color: #21a9ad;
 }
 
 .single-trending-post:hover img {
